# VLAPipe

./: README.md  pyproject.toml
docs/: pi0_changed_only_experiment.md  pi0_split_new_context.md  pi0_split_new_context_prompt.md
examples/: checkpoint_map.json  checkpoint_map_pytorch.json
examples/aloha_sim/: main.py
examples/libero/: main.py
examples/scripts/: convert_policy_checkpoints_to_pytorch.py  download_policy_checkpoints.py
native/pi0_sidecar/: CMakeLists.txt  README.md
native/pi0_sidecar/proto/: gpu_ipc_sidecar.proto
native/pi0_sidecar/src/: prefix_sidecar_main.cc  suffix_sidecar_main.cc
scripts/: benchmark_split_changed_only.py  check_pi0_grpc_action_parity.py  run_pi0_grpc_eval.py  run_pi0_grpc_full.py  run_pi0_grpc_prefix.py  run_pi0_grpc_suffix.py  run_pi0_sidecar_prefix.sh  run_pi0_sidecar_suffix.sh
src/examples/: __init__.py
src/examples/pi0_grpc_native/: V1_V2_EXECUTION_DESIGN.md  __init__.py  eval.py  full.py  prefix.py  smoke_test.py  suffix.py
src/examples/pi0_grpc_native/proto/: pi0_pipeline.proto
src/examples/pi0_grpc_native/proto_gen/: __init__.py  pi0_pipeline_pb2.py  pi0_pipeline_pb2_grpc.py
src/examples/pi0_grpc_native/utils/: __init__.py  checkpoint_conversion.py  checkpoint_runtime.py  grpc_cache.py  layer_state.py  model_helpers.py  model_loader.py  pipeline.py  pipeline_logging.py  pipeline_models.py  pipeline_prefix.py  pipeline_suffix.py  policy_adapter.py  policy_runtime_loader.py  (+3 more)
src/openpi/models_pytorch/: gemma_pipeline.py  layer_scheduler.py  paligemma_pipeline.py  pi0_pytorch.py  prefix_scheduler.py  suffix_scheduler.py
src/openpi_native/: __init__.py  gpu_ipc_bridge.py
(+41 files in other folders)
